# code7-api

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.dev/scripts/: create_mongo_user.py
news/: documents.py  serializers.py  tests.py  urls.py  views.py
news/services/: author.py  news.py
testecode7/: asgi.py  settings.py  urls.py  wsgi.py
